--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
