--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.2.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ru.egartech</groupId>
+    <groupId>ru.gb</groupId>
     <artifactId>VehicleApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>VehicleApp</name>
